--- a/druga.html
+++ b/druga.html
@@ -10,5 +10,8 @@
     <h1 class="moja_kutija">
         Dobrodosli na drugu stranicu
     </h1>
+    <h2 class="moja_kutija">
+        Bok
+    </h2>
 </body>
 </html>
