obrasci, liste,tablice

--- a/druga.html
+++ b/druga.html
@@ -9,9 +9,34 @@
 <body>
     <h1 class="moja_kutija">
         Dobrodosli na drugu stranicu
-    </h1>
-    <h2 class="moja_kutija">
-        Bok
+
     </h2>
+    <ul>
+        <li><a class="vrsta1" href="www.google.com">Google</a></li>
+        <li><a class="vrsta2" href="www.bing.com">Bing</a></li>
+        <li><a class="vrsta1" href="www.facebook.com">Facebook</a></li>
+
+    </ul>
+    <div class="Uzrecica">
+        RIba ribi grize rep
+    </div>
+    <table>
+<tr>
+    <th>PON</th>
+    <th>UTO</th>
+    <th>SRI</th>
+</tr>
+<tr>
+    <td>MAT</td>
+    <td>POV</td>
+    <td>BIO</td>
+</tr>
+<tr>
+    <td>HRV</td>
+    <td>TZK</td>
+    <td>MAT</td>
+</tr>
+
+    </table>
 </body>
 </html>
